# pytest-webtest-extras

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  demo_test.py  pyproject.toml
.github/: FUNDING.yml
docs/: changelog.rst  conf.py  description.rst  index.rst  installation.rst  migration  migration.rst  requirements.txt  user_guide.rst
src/pytest_webtest_extras/: extras.py  plugin.py  utils.py
src/pytest_webtest_extras/resources/: style.css
